--- a/values.yaml
+++ b/values.yaml
@@ -1,124 +1,81 @@
-# Default values for plate-auth.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 replicaCount: 1
-
 image:
   repository: nginx
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: ''
 production:
   database:
-    host: ""
-    port: ""
-    username: ""
-    password: ""
-    databaseBom: ""
-    databaseConfig: ""
-    timezone: "+09:00"
-    dialect: ""
+    host: ''
+    port: ''
+    username: ''
+    password: ''
+    databaseBom: ''
+    databaseConfig: ''
+    timezone: +09:00
+    dialect: ''
   keycloak:
-    clientId: ""
-    clientSecret: ""
-    redirectUri: ""
-    adminUsername: ""
-    adminPassword: ""
-    realm: ""
+    clientId: ''
+    clientSecret: ''
+    redirectUri: ''
+    adminUsername: ''
+    adminPassword: ''
+    realm: ''
   stibee:
-    listID: ""
-    apiKey: ""
+    listID: ''
+    apiKey: ''
   smtp:
-    user: ""
-    password: ""
+    user: ''
+    password: ''
   google:
-    clientId: ""
-    clientSecret: ""
-    loginRedirectUri: ""
+    clientId: ''
+    clientSecret: ''
+    loginRedirectUri: ''
   redirectUri:
-    main: ""
+    main: ''
   mailer:
-    verificationPage: ""
-    pwdResetUrl: ""
+    verificationPage: ''
+    pwdResetUrl: ''
 backend:
   enabled: true
   imageName: vetec/plate-auth-backend
-  tag: ""
+  tag: ''
   port: 3723
   targetPort: 3723
   replicas: 1
-
 frontend:
   enabled: true
   imageName: vetec/plate-auth-frontend
-  tag: ""
+  tag: ''
   port: 3723
   targetPort: 3723
   replicas: 1
-
 imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
+nameOverride: ''
+fullnameOverride: ''
 serviceAccount:
-  # Specifies whether a service account should be created
   create: true
-  # Automatically mount a ServiceAccount's API credentials?
   automount: true
-  # Annotations to add to the service account
   annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
-
+  name: ''
 podAnnotations: {}
 podLabels: {}
-
 podSecurityContext: {}
-  # fsGroup: 2000
-
 securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
 service:
   type: ClusterIP
   port: 80
-
 ingress:
   enabled: true
-  className: ""
-  hostname: ""
+  className: ''
+  hostname: ''
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
+  - host: chart-example.local
+    paths:
+    - path: /
+      pathType: ImplementationSpecific
   tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
 resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
 livenessProbe:
   httpGet:
     path: /
@@ -127,29 +84,13 @@ readinessProbe:
   httpGet:
     path: /
     port: http
-
 autoscaling:
   enabled: false
   minReplicas: 1
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
-# Additional volumes on the output Deployment definition.
 volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
-
-# Additional volumeMounts on the output Deployment definition.
 volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
-
 nodeSelector: {}
-
 tolerations: []
-
 affinity: {}
