--- a/values.yaml
+++ b/values.yaml
@@ -45,7 +45,7 @@ backend:
 frontend:
   enabled: true
   imageName: vetec/plate-auth-frontend
-  tag: '''0b3c40b'''
+  tag: 0b3c40b
   port: 3723
   targetPort: 3723
   replicas: 1
