--- a/templates/backend-deployment.yaml
+++ b/templates/backend-deployment.yaml
@@ -18,7 +18,8 @@ spec:
           image: "{{ .Values.backend.imageName }}:{{ .Values.backend.tag }}"
           volumeMounts:
             - name: config-volume
-              mountPath: /usr/src/app/backend/src/config
+              mountPath: /usr/src/app/backend/src/config/production.json
+              subPath: config.json
       volumes:
         - name: config-volume
           configMap:
