--- a/values.yaml
+++ b/values.yaml
@@ -38,7 +38,7 @@ production:
 backend:
   enabled: true
   imageName: vetec/plate-auth-backend
-  tag: '''e9be4e9'''
+  tag: e9be4e9
   port: 3723
   targetPort: 3723
   replicas: 1
