--- a/values.yaml
+++ b/values.yaml
@@ -38,7 +38,7 @@ production:
 backend:
   enabled: true
   imageName: vetec/plate-auth-backend
-  tag: '421e455'
+  tag: 1a49d00
   port: 3723
   targetPort: 3723
   replicas: 1
