--- a/values.yaml
+++ b/values.yaml
@@ -19,6 +19,7 @@ production:
     adminUsername: ''
     adminPwd: ''
     adminClientId: ''
+    adminClientSecret: ''
     clientId: ''
     clientSecret: ''
     grantTypeCode: ''
