--- a/templates/redis-02-pvc.yaml
+++ b/templates/redis-02-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: redis-pvc  # 필요에 따라 이름을 조정하세요
+  name: redis2-pvc  # 필요에 따라 이름을 조정하세요
 spec:
   accessModes: {{ toYaml .Values.persistentVolume.accessModes | nindent 4 }}
   storageClassName: {{ .Values.persistentVolume.storageClass }}
