--- a/values.yaml
+++ b/values.yaml
@@ -22,7 +22,7 @@ redis:
     persistence:
       enabled: true
       existingClaim: redis-pvc
-      storageClass: local-storage
+      storageClass:
       type: pvc
       accessModes:
       - ReadWriteOnce
